--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Kiểm tra nếu đã có cookie thì không hiển thị phần yêu cầu nhập IP nữa -->
     <div class="d-none" id="mainAppSection">
         <div class="text-center">
-            <div class="fs-1 my-3">LoverLocket</div>
+            <div class="fs-1 my-3">WebLocket</div>
             <div class="m-auto" style="height: 90vmin; width: 90vmin;">
                 <!-- Canvas chụp ảnh sẽ ở đây (full fill), tỉ lệ 1:1 và độ phân giản 720x720 -->
                 <canvas id="cameraCanvas" width="320" height="320" class="rounded-5 p-lg-border"></canvas>
