--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <!-- Canvas chụp ảnh sẽ ở đây (full fill), tỉ lệ 1:1 và độ phân giản 720x720 -->
                 <canvas id="cameraCanvas" width="720" height="720" class="rounded-5 p-lg-border"></canvas>
             </div>
-            <div class="position-relative">
-                <div class="p-pink-bg m-auto rounded-circle mt-3 d-flex justify-content-center align-items-center"
+            <div class="position-relative my-3">
+                <div class="cameraContainer"
                     style="height: 20vmin; width: 20vmin" id="cameraIcon">
                     <i class="bi bi-camera"></i>
 
